[metadata]
name = mridc
version = 0.0.1
author = Dimitrios Karkalousos
author_email = d.karkalousos@amsterdamumc.nl
description = Data Consistency for Magnetic Resonance Imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/wdika/mridc

[options]
python_requires = >=3.8

[options.packages.find]
where = src
