# encoding: utf-8
# __author__ = "Dimitrios Karkalousos"

[aliases]
test=pytest

[options.data_files]
. = requirements/requirements.txt

# durations=0 will display all tests execution time, sorted in ascending order starting from from the slowest one.
# -vv will also display tests with duration = 0.00s
[tool:pytest]
addopts = --verbose --pyargs --durations=0
testpaths = tests
norecursedirs = mridc docs scripts tools *.egg .* _darcs build CVS dist venv {arch}
markers =
    unit: marks unit test, i.e. testing a single, well isolated functionality (deselect with '-m "not unit"')
    integration: marks test checking the elements when integrated into subsystems (deselect with '-m "not integration"')
    system: marks test working at the highest integration level (deselect with '-m "not system"')
    acceptance: marks test checking whether the developed product/model passes the user defined acceptance criteria (deselect with '-m "not acceptance"')
    docs: mark tests related to documentation (deselect with '-m "not docs"')
    skipduringci: marks tests that are skipped ci as they are addressed by Jenkins jobs but should be run to test user setups
    pleasefixme: marks tests that are broken and need fixing
    torch_tts: marks tests that are to be run when "torch_tts" is installed but not all mridc packages

[isort]
known_localfolder = mridc, tests
sections = FUTURE,STDLIB,THIRDPARTY,LOCALFOLDER
default_section = THIRDPARTY
skip = setup.py, docs/source/conf.py
